--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ border-radius:8px;
 padding: 10px 20px;}
 
 
-#sum {background-color: rgb(255, 0, 0);
+#div {background-color: rgb(255, 0, 0);
 color: rgb(255, 255, 255);
 border-radius:8px;
+
 padding: 10px 20px;}
